plugins {
	id 'org.springframework.boot' version '2.3.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'org.jupiterhub'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'

	// Other consideration NoSQL Graph db like Neo4j
//	implementation 'org.springframework.data:spring-data-neo4j'
//	implementation 'org.springframework.boot:spring-boot-starter-data-cassandra-reactive'


	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'



	// by docs, this should be enough, but it's not being picked up, declare explictly
	implementation('com.fasterxml.jackson.core:jackson-databind:2.12.0-rc1')
	constraints {
		implementation('com.fasterxml.jackson.core:jackson-databind:2.12.0-rc1') {
			because 'JDK14 records are not supported pre < 2.12.0'
		}
	}

	implementation 'org.springframework.boot:spring-boot-starter-rsocket'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'io.r2dbc:r2dbc-h2'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'io.projectreactor:reactor-test:3.3.10.RELEASE'


}

test {
	useJUnitPlatform()

	// Enable records preview for JDK14
	jvmArgs(['--enable-preview'])
}

// Enable records preview for JDK14
tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}


tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}